@@ -1,5 +1,5 @@
 Package: sp
-Version: 1.2-4
+Version: 1.2-5
 Title: Classes and Methods for Spatial Data
 Authors@R: c(person("Edzer", "Pebesma", role = c("aut", "cre"),
 				email = "edzer.pebesma@uni-muenster.de"),
