@@ -9,10 +9,10 @@ citEntry(entry="Article",
   number       = 2,
   pages        = "9--13",
   month        = "November",
-  url          = "http://CRAN.R-project.org/doc/Rnews/",
+  url          = "https://CRAN.R-project.org/doc/Rnews/",
   textVersion = 
   paste("Pebesma, E.J., R.S. Bivand, 2005. Classes and methods for spatial data in R.",
-	"R News 5 (2), http://cran.r-project.org/doc/Rnews/.")
+	"R News 5 (2), https://cran.r-project.org/doc/Rnews/.")
 )
 
 citEntry(entry="book",
